tests/files/flow_controller_tests/should_run/068.cmdr
x = 6.28;
print sin(x);