tests/files/flow_controller_tests/should_fail/041.cmdr
x = "cat"
print sin(x);